--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-* {
-  list-style-type: none;
-}
 .parallax {
     /* The image used */
     background-image: url("http://beyondmeasuretraining.com/wp-content/uploads/2017/10/Start-Road-Cocaine-Addiction-Treatment-SummitHelps.com_.jpg");
@@ -21,30 +18,6 @@ body {
   background-color: rgb(249, 235, 248);
   font-size: 1em;
   font-family: "Times New Roman", Times, serif
-}
-
-div nav {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  background-color: rgb(249, 211, 240);
-}
-div nav > ul {
-  display: flex;
-  justify-content: space-around;
-}
-div nav > ul > li:hover {
-  background-color: rgb(250, 232, 112);
-}
-div nav > ul > li:nth-child(1) {
-  margin-right: auto;
-}
-div nav > ul > li:nth-child(2) {
-  margin-right: 20%;
-}
-div nav > ul > li:nth-child(3) {
-  justify-content: flex-end;
-  margin-right: 5%;
 }
 
 .hello div p{
@@ -92,6 +65,7 @@ position: absolute;
 }
 
 .contact{
+  margin: 10em;
   display: flex;
   flex: 1;
   flex-direction: row;
