--- a/styles/style.css
+++ b/styles/style.css
@@ -37,3 +37,40 @@ div nav > ul {
 div nav > ul > li:hover {
   background-color: rgb(250, 232, 112);
 }
+
+footer {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  align-items: center;
+  vertical-align: middle;
+  justify-content: space-around;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 3em;
+  background-color: cyan;
+  color: #000;
+}
+
+footer .hidden {
+    display: none;
+}
+
+footer .maintainedby:hover .hidden {
+  display: block;
+  position: absolute;
+  margin-top: -8em;
+  margin-left: 5em;
+}
+
+footer .profile {
+  width: 2em;
+}
+
+.rounded-corners {
+  background-color: white;
+  border-radius: 30px;
+  height: 100px;
+  width: 100px;
+}
